# eflycode-cli

./: .dockerignore  .eflycodeignore  .env.example  .gitignore  README.md  TODO.md  debug_runner.py  demo.py  demo_context.py  echoai_mcp_setting.json  gradio_app.py  main.py  mcp.md  pyproject.toml  quick_sort.py  redis.conf  requirements.txt  run_echo.bat  setup.py  task_tracker_test.py  test.py  test_chain_compressor.py  test_error_classification.py  test_main_ui.py  test_token_calculator.py  todos.md
.eflycode/: config.toml
.github/workflows/: unitest.yml
.trae/rules/: project_rules.md
docs/: README.md  architecture.md  cli-commands.md  configuration.md  development.md  getting-started.md  mcp-servers.md  ui-system.md
echo/: config.py  constant.py  main.py  test.py
echo/agent/: developer.py  registry.py  run_loop.py  trae.py
echo/agents/: __init__.py  agent.py  deepsearch.py  deepsearcher.py  developer.py  mcp_agent.py  memory.py  observer.py  (+1 more)
echoai/: main.py
eflycode/: __init__.py  app.py  config.py  constant.py  context.py
tests/: README.md  run_tests.py  test_agent.py  test_bridge.py  test_compressors.py  test_compressors_updated.py  test_config.py  test_context_strategies.py  test_edit_file_tool.py  test_enterprise_agent.py  test_event_bus.py  test_events.py  test_execute_command_tool.py  test_file_tool.py  test_mcp_client.py  test_mcp_config.py  test_memory.py  test_openai_provider.py  test_renderer.py  test_retrievers.py  test_search_files_tool.py  test_stream_parser.py  test_token_calculator.py  test_tokenizer.py  test_ui_event_queue.py
(+457 files in other folders)
