[project]
name = "echoai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "loguru>=0.7.3",
    "prompt-toolkit>=3.0.52",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "textual>=6.1.0",
    "wcwidth>=0.2.13",
]


[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
